#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(mobile-bench, 0.1, autisyu@gmail.com)
AC_CONFIG_SRCDIR([mobile-bench.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h malloc.h stdlib.h sys/time.h])
AM_INIT_AUTOMAKE(mobile-bench, 0.1)
# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([gettimeofday memmove memset socket])

AC_OUTPUT([Makefile])
